donggu-1/ingress/donggu-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: donggu-ingress
  namespace: donggu-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "0"    
spec:
  ingressClassName: nginx
  rules:
    - host: www.dorong9.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: donggu-1-nginx-stable
              port:
                number: 80

# 카나리 테스트용
    - host: canary.dorong9.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: donggu-1-nginx-canary
              port:
               number: 80

# api 서버
    - host: api.dorong9.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: donggu-1-tomcat
              port:
                number: 8080
